# unleash-cpp-sdk

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.py
.githooks/: pre-commit
.github/workflows/: ci.yml  release-packaging.yml
examples/: CMakeLists.txt  live_example.cpp
include/unleash/Client/: unleashClient.hpp
include/unleash/Configuration/: clientConfig.hpp
include/unleash/Domain/: context.hpp  toggle.hpp  toggleSet.hpp  variant.hpp
include/unleash/EventHandler/: eventHandler.hpp
include/unleash/Fetcher/: toggleFetcher.hpp
include/unleash/Metrics/: metricList.hpp  metricSender.hpp  metricStore.hpp  metricToggle.hpp
include/unleash/Store/: flagStore.hpp  storageProvider.hpp
include/unleash/Transport/: httpClient.hpp  iComClient.hpp
include/unleash/Utils/: jsonCodec.hpp  utils.hpp
scripts/: format.sh
src/: clientConfig.cpp  context.cpp  eventHandler.cpp  flagStore.cpp  httpClient.cpp  jsonCodec.cpp  metricList.cpp  metricSender.cpp  metricStore.cpp  metricToggle.cpp  storageProvider.cpp  toggle.cpp  toggleFetcher.cpp  toggleSet.cpp  unleashClient.cpp  variant.cpp
src/internal/: expected.hpp  jsonCodec.hpp
tests/: test_clientConfig.cpp  test_context.cpp  test_eventHandler.cpp  test_flagStore.cpp  test_httpClient.cpp  test_jsonCodec.cpp  test_metricList.cpp  test_metricSender.cpp  test_metricStore.cpp  test_metricToggle.cpp  test_storageProvider.cpp  test_toggle.cpp  test_toggleFetcher.cpp  test_toggleSet.cpp  test_variant.cpp
